# WizzMania

./: .gitignore  CMakeLists.txt  ROADMAP.md  launch_multiclient.bat  launch_multiclient.sh  main.cpp  rewrite_tcpserver.py  test_client.py  test_logs.txt  wizzmania.db  wizzmania.db-journal
.cache/clangd/index/: AnimationManager.cpp.73C7C2BDBA50EE5A.idx  AnimationManager.hpp.09CAED972F5878CA.idx  Context.hpp.487484411E29E511.idx  Font.cpp.64E0DF0E17C7D071.idx  Font.hpp.CD4393DEA50E0480.idx  Game.cpp.4C0EA786AECFF328.idx  Game.hpp.D8B5B1EADBE96FD8.idx  GameIPC.h.21800853AAC9F068.idx  GameLogic.cpp.D7A20F06ECCA692E.idx  GameLogic.hpp.D405EDF271C961CE.idx  GameLogic_test.cpp.A961AD5D28932B1E.idx  Grid.cpp.F215645CCA22C28C.idx  Grid.hpp.8DFA6F6D88B99131.idx  Grid_test.cpp.629C50C3DEC46BBD.idx  InputManager.cpp.B4986DD50E14D2E5.idx  InputManager.hpp.CE9A08B34B2684C2.idx  IntegrationTests.cpp.F8BD320071D8CD6F.idx  NativeSharedMemory.h.64EF2F15A77B8E9A.idx  PersistenceManager.cpp.9432A6E4C1EFEAED.idx  PersistenceManager.hpp.E89C42E4F086F6FD.idx  Renderer.cpp.5A8729D058CC8B6B.idx  Renderer.hpp.D77906C5E1774B34.idx  SoundManager.cpp.BA5FEBD40AFF89BF.idx  SoundManager.hpp.DBA96C3B4BB57262.idx  Texture.cpp.AE117E7DD9B3EFF2.idx  Texture.hpp.26D2BEA8DD0F0282.idx  Tile.cpp.A18594F54AF1B362.idx  Tile.hpp.F667C5C94E4772A8.idx  Tile_test.cpp.4A93D72D80888BDA.idx  Window.cpp.EADFA5FF03AB3812.idx  Window.hpp.7D95F7A42DAA4457.idx  main.cpp.75F1F4E63836DB7E.idx  main_test.cpp.F0D556E7C87A68BA.idx
Presentation/: index.html  mermaid_view.html  script.js  serve.py  style.css  view_blueprint.html
client/: AddFriendDialog.cpp  AddFriendDialog.h  AudioManager.cpp  AudioManager.h  AuthWindow.cpp  AuthWindow.h  AvatarManager.cpp  AvatarManager.h  CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  GameBridge.cpp  GameBridge.h  GameLauncher.cpp  GameLauncher.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  RegisterDialog.cpp  RegisterDialog.h  main.cpp  resources.qrc
common/: CMakeLists.txt  GameIPC.h  NativeSharedMemory.h  Packet.cpp  Packet.h  TicTacToeIPC.h  Types.h
docs/: Client_Architecture.md  Code_Portability.md  Game_Integration_Analysis.md  Innovation_Roadmap.md  Modern_Cpp_Standards.md  Pillar2_Mentorship_QA.md  Pillar3_Mentorship_QA.md  Pillar4_Scalability_Analysis.md  Pillar5_Security_Analysis.md  Pillar5_Security_Mentorship_QA.md  Pillar6_Documentation_Standards.md  Protocol_Implementation.md  ROADMAP.md  Server_Architecture.md  Windows_Setup_Guide.md
games/BrickBreaker/: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  generate_laser.py  generate_music.py
games/BrickBreaker/Presentation/: index.html  script.js  style.css
games/BrickBreaker/frontend/: package-lock.json  package.json
games/BrickBreaker/frontend/app/: layout.tsx  page.tsx
games/BrickBreaker/include/core/: AudioManager.h  FontManager.h  Game.h  GameState.h
games/BrickBreaker/include/core/states/: GameOverState.h  MenuState.h  PausedState.h  PlayingState.h  SettingsState.h
games/BrickBreaker/include/entities/: Block.h  Brick.h  Cannon.h  Projectile.h
games/BrickBreaker/include/managers/: BlockManager.h
games/BrickBreaker/include/ui/: AnimatedText.h  Button.h  Starfield.h
games/BrickBreaker/src/: main.cpp
games/BrickBreaker/src/core/: AudioManager.cpp  FontManager.cpp  Game.cpp  GameState.cpp
games/BrickBreaker/src/core/states/: GameOverState.cpp  MenuState.cpp  PausedState.cpp  PlayingState.cpp  SettingsState.cpp
games/BrickBreaker/src/entities/: Block.cpp  Brick.cpp  Cannon.cpp  Projectile.cpp
games/BrickBreaker/src/managers/: BlockManager.cpp
games/BrickBreaker/src/ui/: AnimatedText.cpp  Button.cpp  Starfield.cpp
games/BrickBreaker/tests/: CMakeLists.txt
games/TicTacToe/: CMakeLists.txt
games/TicTacToe/include/core/: Game.h
games/TicTacToe/include/core/states/: PlayingState.h  State.h
games/TicTacToe/src/: main.cpp
games/TicTacToe/src/core/: Game.cpp
games/TicTacToe/src/core/states/: PlayingState.cpp
games/TileTwister/: .gitignore  CMakeLists.txt  README.md
games/TileTwister/docs/: TestCoverage.md  architecture.md  game_logic_algorithms.md  implementation_plan.md
games/TileTwister/docs/presentation/: index.html  launcher.js  script.js  style.css
games/TileTwister/src/: main.cpp
games/TileTwister/src/core/: GameLogic.cpp  GameLogic.hpp  Grid.cpp  Grid.hpp  Tile.cpp  Tile.hpp
games/TileTwister/src/engine/: Context.hpp  Font.cpp  Font.hpp  Renderer.cpp  Renderer.hpp  SoundManager.cpp  SoundManager.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
games/TileTwister/src/game/: AnimationManager.cpp  AnimationManager.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp  PersistenceManager.cpp  PersistenceManager.hpp
games/TileTwister/tests/: main_test.cpp
games/TileTwister/tests/core/: GameLogic_test.cpp  Grid_test.cpp  Tile_test.cpp
games/TileTwister/tests/integration/: IntegrationTests.cpp  TestScenarios.md
maquette/: chat_window_desc.md  login_window_desc.md
scripts/: refactor_tcpserver.py
server/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  DatabaseManager.cpp  DatabaseManager.h  GameRoomManager.cpp  GameRoomManager.h  SessionManager.cpp  SessionManager.h  TcpServer.cpp  TcpServer.h  main.cpp
server/certs/: server.crt  server.key
server/handlers/: AuthHandlers.cpp  AuthHandlers.h  GameHandlers.cpp  GameHandlers.h  IPacketHandler.h  PacketRouter.cpp  PacketRouter.h  SocialHandlers.cpp  SocialHandlers.h
tests/common/: CMakeLists.txt  test_packet.cpp
tests/server/: CMakeLists.txt  contact_test.cpp  messaging_test.cpp  offline_test.cpp  stress_test.cpp
