# Test configuration will be added later
# For now, this file is a placeholder

# Example structure for future tests:
# 
# # Find test framework (Catch2 or Google Test)
# find_package(Catch2 REQUIRED)
# 
# # Unit tests
# add_subdirectory(unit)
# 
# # Integration tests
# add_subdirectory(integration)

